@@ -114,10 +114,10 @@ sub _show_step_2 {
         $data = $c->{'db'}->get_host_names(filter => [ Thruk::Utils::Auth::get_auth_filter($c, 'hosts') ]);
     }
     elsif($report_type eq 'hostgroups') {
-        $data = $c->{'db'}->get_hostgroup_names(filter => [Thruk::Utils::Auth::get_auth_filter($c, 'hostgroups')]);
+        $data = $c->{'db'}->get_hostgroup_names_from_hosts( filter => [ Thruk::Utils::Auth::get_auth_filter( $c, 'hosts' ) ] );
     }
     elsif($report_type eq 'servicegroups') {
-        $data = $c->{'db'}->get_servicegroup_names(filter => [ Thruk::Utils::Auth::get_auth_filter($c, 'servicegroups')]);
+        $data = $c->{'db'}->get_servicegroup_names_from_services( filter => [ Thruk::Utils::Auth::get_auth_filter( $c, 'services' ) ] );
     }
     elsif($report_type eq 'services') {
         my $services = $c->{'db'}->get_services(filter => [ Thruk::Utils::Auth::get_auth_filter($c, 'services')]);
